welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:14: error: Unmatched closing brace '}' ignored here
    }
    ^SlugSnail:16: error: eof expected but '}' found.
  }    
  ^